--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@ input{
 
 .lyrics-table th {
     padding: 20px;
-    text-align: left;
+    text-align: center;
     font-weight: 600;
     color: #60a5fa;
     font-size: 1.1em;
