--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,28 +14,34 @@
 
 <body>
   <h1>Lyric Search</h1>
+  <% if (typeof error !=='undefined' ) { %>
+    <p>
+      <%= error %>
+    </p>
+    <% } %>
 
-  <form action="/search" method="POST">
-    <fieldset>
-      <legend><strong>Song Information</strong></legend>
+      <form action="/search" method="POST">
+        <fieldset>
+          <legend><strong>Song Information</strong></legend>
 
-      <label>
-        Artist:
-        <input type="text" name="artist" required>
-      </label>
+          <label>
+            Artist:
+            <input type="text" name="artist" required>
+          </label>
 
-      <label>
-        Song Title:
-        <input type="text" name="songName" required>
-      </label>
-    </fieldset>
+          <label>
+            Song Title:
+            <input type="text" name="songName" required>
+          </label>
+        </fieldset>
 
-    <br>
-    <input type="reset">
-    <input type="submit" value="Search">
-  </form>
+        <br>
+        <input type="reset">
+        <input type="submit" value="Search">
+      </form>
 
-  <br>
-  <a href="/">HOME</a>
+      <br>
+      <a href="/">HOME</a>
 </body>
+
 </html>
