--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,6 +28,11 @@
         </a>
         <p>Access your starred lyrics collection</p>
 
+        <a href="/clear">
+            <h2>Clear Database</h2>
+        </a>
+        <p>Remove all songs from your collection</p>
+
     </div>
 
 </body>
