--- a/views/search.ejs
+++ b/views/search.ejs
@@ -20,6 +20,7 @@
     </p>
     <% } %>
 
+      <!-- form where user provides data to search for lyrics -->
       <form action="/search" method="POST">
         <fieldset>
           <legend><strong>Song Information</strong></legend>
@@ -28,6 +29,8 @@
             Artist:
             <input type="text" name="artist" required>
           </label>
+
+          <br><br>
 
           <label>
             Song Title:
